# amalitech-de-labs

./: .gitignore  README.md  config.py  pyproject.toml
dem02_tmdb_movie/: main.ipynb
dem02_tmdb_movie/docs/: appendix.typ  final_report.typ  generate_appendix.py
dem02_tmdb_movie/tests/: caching_movie_test.py  cleaning_test.py  fetch_movie_test.py
dem02_tmdb_movie/utils/: __init__.py  api.py  clearner.py  helpers.py  types.py
tmdb_movie/: main.ipynb
tmdb_movie/tests/: caching_movie_test.py  cleaning_test.py  fetch_movie_test.py
tmdb_movie/utils/: api.py  clearner.py  helpers.py  types.py
