[project]
name = "amalitech-de-labs"
version = "0.1.0"
description = "Amalitech Data Engineering Labs - A collection of data engineering exercises and projects for learning and practice."
authors = [
    { name = "Hubert Apana",  email = "kwakuhubert@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2025.12.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]
